Ingress_Controller_try/dashboard-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: dashboard-ingress
  namespace: kube-system
 # annotations:
   # nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  #backend:
    #serviceName: default-http-backend
    #servicePort: 80
  rules:
  - host: dashboard.ingress
    http:
      paths:
      #-path: /
       - backend:
          serviceName: kubernetes-dashboard
          servicePort: 80
